# grcompiler

./: .gitattributes  .gitignore  CMakeLists.txt  ChangeLog  Makefile.am  NEWS  README.md  TODO  aclocal.m4  configure  configure.ac  dbg_classes.txt  makefile.mak  packages.config.in  runantlr.bat
compiler/: CMakeLists.txt  Compiler.cpp  Compressor.cpp  ErrorCheckClasses.cpp  ErrorCheckFeatures.cpp  ErrorCheckRules.cpp  Fsm.cpp  Fsm.h  GdlExpression.cpp  GdlExpression.h  GdlFeatures.cpp  GdlFeatures.h  GdlGlyphClassDefn.cpp  GdlGlyphClassDefn.h  GdlGlyphDefn.h  GdlNameDefn.h  GdlRenderer.cpp  GdlRenderer.h  GdlRule.cpp  GdlRule.h  GdlTablePass.cpp  GdlTablePass.h  GlyphBoundaries.cpp  GlyphBoundaries.h  GrCompiler.rc  GrcBinaryStream.h  GrcErrorList.cpp  GrcErrorList.h  GrcFont.cpp  GrcFont.h  GrcGlyphAttrMatrix.cpp  GrcGlyphAttrMatrix.h  GrcManager.cpp  GrcManager.h  GrcMasterTable.cpp  GrcMasterTable.h  GrcSymTable.cpp  GrcSymTable.h  GrpASTNode.hpp  GrpExtensions.cpp  (+29 more)
compiler/Generic/: CMakeLists.txt  GrCommon.h  GrConstants.h  GrDebug.h  GrMstypes.h  GrPlatform.h  Makefile.in  Platform.cpp  UtilString.cpp  UtilString.h  UtilString_i.cpp
compiler/Grammar/: ASTDebug.hpp  CMakeLists.txt  CharScanner.cpp  CommonToken.cpp  InputBuffer.cpp  Makefile.in  MismatchedTokenException.cpp  NoViableAltException.cpp  Parser.cpp  ScannerException.cpp  Token.cpp  TokenBuffer.cpp
compiler/Grammar/Antlr/: AST.hpp  ASTNULLType.hpp  CharScanner.hpp  CircularQueue.hpp  Token.hpp
compiler/LZ4/: CMakeLists.txt  Makefile.am  README.graphite
doc/: CMakeLists.txt  CompilerDebugFiles.rtf  DuplicateFeatureIDs.rtf  GDL_BNF.rtf  GTF_4_0.rtf  GraphiteOverview.rtf  MakeGDL.odt  Makefile.am  Makefile.in  README.gdlpp  StackMachineCommands.rtf  TransductionLog.rtf  grcompiler.1.xml  version_update.txt
grcompiler/branches/mirroring/doc/: CompilerDebugFiles.rtf  GDL.rtf  Makefile.am
grcompiler/tags/v2.4/: Makefile.am
grcompiler/tags/v2.4/compiler/: Compiler.cpp  ErrorCheckClasses.cpp  GdlExpression.cpp  GdlExpression.h  GdlFeatures.cpp  GdlGlyphClassDefn.h  GdlRule.cpp  GdlTablePass.cpp  GdlTablePass.h  GrcErrorList.cpp  GrcFont.cpp  Grp.h  GrpLexer.hpp  GrpParser.g  GrpParserDebug.cpp  ParserTreeWalker.cpp  PostParser.cpp  TtfUtil.cpp  constants.h  main.cpp  main.h  stddef.gdh
grcompiler/tags/v2.4/debian/: changelog
grcompiler/tags/v2.4/doc/: StackMachineCommands.rtf
grcompiler/trunk/: ChangeLog  Makefile.am  Makefile.in  README  TODO  aclocal.m4  configure.ac  configure.in  dbg_enginecode.txt  dbg_glyphattrs.txt  makefile.mak
grcompiler/trunk/compiler/: Compiler.cpp  Compressor.h  ErrorCheckClasses.cpp  ErrorCheckFeatures.cpp  ErrorCheckRules.cpp  Fsm.cpp  Fsm.h  GdlExpression.cpp  GdlExpression.h  GdlFeatures.cpp  GdlFeatures.h  GdlGlyphClassDefn.cpp  GdlGlyphClassDefn.h  GdlGlyphDefn.h  GdlNameDefn.h  GdlRenderer.cpp  GdlRenderer.h  GdlRule.cpp  GdlRule.h  GdlTablePass.cpp  GdlTablePass.h  GlyphBoundaries.cpp  GlyphBoundaries.h  GrcBinaryStream.h  GrcErrorList.cpp  GrcErrorList.h  GrcFont.cpp  GrcFont.h  GrcGlyphAttrMatrix.cpp  GrcManager.cpp  GrcManager.h  GrcMasterTable.cpp  GrcMasterTable.h  GrcSymTable.cpp  GrcSymTable.h  Grp.h  GrpASTNode.hpp  GrpExtensions.cpp  GrpLexer.cpp  GrpLexer.hpp  (+26 more)
grcompiler/trunk/compiler/Generic/: GrCommon.h  GrMstypes.h  GrPlatform.h  HashMap_i.cpp  Makefile.am  Makefile.in  Platform.cpp  Throwable.h  UtilString.cpp  UtilString_i.cpp
grcompiler/trunk/compiler/Grammar/: AST.cpp  Makefile.am  Makefile.in  Token.cpp
grcompiler/trunk/debian/: changelog  control  copyright  rules
grcompiler/trunk/doc/: GDL.rtf  GDL_BNF.rtf  GTF_4_0.rtf  Makefile.am  Makefile.in  gdlpp.1.in  grcompiler.1.xml
grcompiler/trunk/installer/: gr_buildbat.bat  readme.txt
grcompiler/trunk/installer/windows/: grcompiler.iss
grcompiler/trunk/license/: LICENSING.txt
grcompiler/trunk/preprocessor/: Makefile.am  Makefile.in  README  cpp1.c  cpp2.c  gdlpp.mak  usecpp.c
grcompiler/trunk/test/GrcRegressionTest/: CompareFontTables.cpp  FileFont.cpp  GrcRegressionTest.cpp  GrcRtFileFont.cpp  GrcRtFileFont.h  Makefile.am  Makefile.vc  TtfUtil.cpp  TtfUtil.h  configure.ac  main.h  readme.txt  regtest
preprocessor/: CMakeLists.txt  FPP_protos.h  Makefile.am  Makefile.in  README  cpp.h  cpp1.c  cpp2.c  cpp3.c  cpp4.c  cpp5.c  cpp6.c  cppadd.h  cppdef.h  gdlpp.mak  memory.c  memory.h  usecpp.c
preprocessor/patches/: default-inlude-dir.patch  envvar-gdlpp-prefs.patch  floating-points.patch  showversion.patch  version-sil-revised.patch  windows.patch
test/GrcRegressionTest/: CMakeLists.txt  CompareFontTables.cpp  FileFont.cpp  FileInput.cpp  FileInput.h  FontStub.cpp  GrcRegressionTest.cpp  GrcRtFileFont.cpp  GrcRtFileFont.h  Makefile.am  Makefile.vc  TestCase.h  TtfUtil.cpp  TtfUtil.h  configure.ac  main.h  readme.txt  regtest
test/GrcRegressionTest/fonts/: CharisFeatures.gdh  CharisMain.gdl  CharisPitches.gdh  CharisRules.gdh  PadaukGlyphs.gdh  PadaukMain.gdl  PigLatin.gdl  SchAPClasses.gdh  SchFeatures.gdh  SchGlyphs.gdh  SchMain.gdl  benchmark_test.wpx  rebuild_benchmarks.bat  regtest.mak  stddef.gdh
test/GrcRegressionTest/fonts/dbg_Charis/: $_temp.gdl  CharisBenchmark.gdx  dbg_classes.txt  dbg_cmap.txt  dbg_enginecode.txt  dbg_fsm.txt  dbg_glyphattrs.txt  dbg_parsetree.txt  dbg_ruleprec.txt  gdlerr.txt
test/GrcRegressionTest/fonts/dbg_Padauk/: $_temp.gdl  PadaukBenchmark_v3.gdx  dbg_classes.txt  dbg_cmap.txt  dbg_enginecode.txt  dbg_fsm.txt  dbg_glyphattrs.txt  dbg_parsetree.txt  dbg_ruleprec.txt  gdlerr.txt
test/GrcRegressionTest/fonts/dbg_PigLatin_v2/: $_temp.gdl  PigLatinBenchmark_v2.gdx  dbg_classes.txt  dbg_cmap.txt  dbg_enginecode.txt  dbg_glyphattrs.txt  dbg_parsetree.txt  dbg_ruleprec.txt  gdlerr.txt
test/GrcRegressionTest/fonts/dbg_PigLatin_v3/: PigLatinBenchmark_v3.gdx  dbg_enginecode.txt  dbg_fsm.txt  dbg_glyphattrs.txt  dbg_ruleprec.txt  gdlerr.txt  readme.txt
test/GrcRegressionTest/fonts/dbg_Sch/: $_temp.gdl  SchBenchmark.gdx  dbg_classes.txt  dbg_cmap.txt  dbg_enginecode.txt  dbg_fsm.txt  dbg_glyphattrs.txt  dbg_parsetree.txt  dbg_ruleprec.txt  (+1 more)
(+614 files in other folders)
