noinst_LIBRARIES = libparser.a

libparser_a_SOURCES = \
	AST.cpp \
	ASTDebug.hpp \
	ANTLRException.cpp \
	ASTFactory.cpp \
	BitSet.cpp \
	CharBuffer.cpp \
	CharScanner.cpp \
	CommonASTNode.cpp \
	CommonToken.cpp \
	InputBuffer.cpp \
	LexerSharedInputState.cpp \
	LLkParser.cpp \
	MismatchedTokenException.cpp \
	NoViableAltException.cpp \
	Parser.cpp \
	ParserException.cpp \
	ParserSharedInputState.cpp \
	ScannerException.cpp \
	String.cpp \
	Token.cpp \
	TokenBuffer.cpp

EXTRA_DIST = @srcdir@/Antlr/*.hpp

