AM_CPPFLAGS = -DGR_NAMESPACE

noinst_LIBRARIES = libgeneric.a
noinst_HEADERS = \
	GrCommon.h \
	GrMstypes.h \
	GrDebug.h \
	GrPlatform.h \
	Throwable.h \
	UtilString.h

# libgeneric_a_SOURCES = HashMap.cpp Util.cpp UtilInt.h UtilString.cpp Platform.cpp

libgeneric_a_SOURCES = UtilInt.h Platform.cpp

EXTRA_DIST = UtilString_i.cpp
