AM_CPPFLAGS = -DGR_NAMESPACE

noinst_LIBRARIES = libgeneric.a
noinst_HEADERS = \
	GrCommon.h \
	GrMstypes.h \
	GrDebug.h \
	GrPlatform.h \
	Throwable.h \
	UtilRect.h \
	UtilString.h \
	UtilString_i.cpp \
	UtilHashMap.h \
	HashMap_i.cpp \
	UtilMem.h \
	UtilSet.h \
	Set_i.cpp \
	UtilVector.h \
	Vector_i.cpp

libgeneric_a_SOURCES = HashMap.cpp Util.cpp UtilInt.h UtilString.cpp Platform.cpp
